--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,14 @@
     <artifactId>selenium-java</artifactId>
     <version>4.38.0</version>
 </dependency>
-  </dependencies>
+
+ <!-- TestNG -->
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.10.2</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
+
 </project>
